# log4cplus-2.1.0

./: .gitignore  README.md  REVISION
examples/: 01.helloworld.cpp  02.UseProperties.cpp
examples/Log/: main.cpp
examples/cmake/: CMakeLists.txt
examples/configandwatch/: CMakeLists.txt  readme.md
examples/configandwatch/config/: log4cplus.properties
examples/configandwatch/src/: main.cpp
examples/loglog/: CMakeLists.txt  main.cpp
examples/useproperties/: CMakeLists.txt  readme.md
examples/useproperties/config/: log4cplus.properties
examples/useproperties/src/: Log4cplusInit.cpp  Log4cplusInit.h  main.cpp
